Change name from Akash to Boburbek in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!-- Header -->
       <nav class="navbar">
         <div class="max-width">
-          <div class="logo"><a href="#"><span>AISTECHX</span><span>.com</span></a></div>
+          <div class="logo"><a href="#"><span>Boburbek</span><span>.com</span></a></div>
           <ul class="menu">
             <li><a href="#home" class="menu-btn"><strong>Home</strong></a></li>
             <li><a href="#about" class="menu-btn"><strong>About</strong></a></li>
@@ -37,7 +37,7 @@
         <div class="max-width">
           <div class="home-content">
             <div class="text-1">Hello, This is</div>
-            <div class="text-2">Akash Mahapatra</div>
+            <div class="text-2">Boburbek</div>
             <div class="text-3">And I'm a <span class="typing"></span></div>
             <a href="#">Hire me</a>
           </div>
@@ -53,7 +53,7 @@
               <img src="https://images.unsplash.com/photo-1503235930437-8c6293ba41f5" alt="Profile Image 626x626">
             </div>
             <div class="column right">
-              <div class="text">I'm Akash and I'm a <span class="typing-2"></span></div>
+              <div class="text">I'm Boburbek and I'm a <span class="typing-2"></span></div>
               <p>Seeking an entry-level opportunity with an esteemed organization where I can utilize my skills & enhance learning in the field of work. Capable of mastering new technologies.</p>
               <br>
               <div class="text">Why Work With Me</div>
